--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <body>
     <!-- Шапка сайту-->
+    <!--
     <header class="header">
       <div class="container navigation__container">
         <a class="logo" href="WebStudio" aria-label="Логотип сайта WebStudio"
@@ -62,15 +63,19 @@
         </ul>
       </div>
     </header>
+    -->
 
     <main>
       <!--Секція Герой-->
+      <!--
       <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button data-modal-open class="btn__studio" type="button">Заказать услугу</button>
+          -->
 
           <!-- Модальне вікно-->
+          <!--
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <button data-modal-close class="close-modal">
@@ -142,6 +147,7 @@
             </div>
         </div>
         </section>
+      -->
           
 
       <!--Секція Особливості-->
@@ -198,6 +204,7 @@
       </section>
 
       <!--Секция про нас-->
+      <!--
       <section class="section product">
         <div class="container product-container">
           <h2 class="product__title">Чем мы занимаемся</h2>
@@ -225,8 +232,11 @@
           </ul>
         </div>
       </section>
+    -->
+
 
       <!--Секція Команда-->
+      <!--
       <section class="section team">
         <div class="container team-member">
           <h2 class="team-member__title">Наша команда</h2>
@@ -415,10 +425,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>-->
     </main>
 
     <!--Постійні клієнти-->
+    <!--
     <section class="customers">
       <h2 class="customers__title">Постоянные клиенты</h2>
       <div class="container customer-container">
@@ -472,9 +483,10 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section>-->
 
     <!--Підвал сайту-->
+    <!--
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-block">
@@ -554,7 +566,8 @@
         </div>
 
       </div>
-    </footer>
+    </footer>>
+  -->
 
     <script src="./js/modal.js"></script>
   </body>
