--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       </section>
 
       <!--Секция про нас-->
-      <!--
+      
       <section class="section product">
         <div class="container product-container">
           <h2 class="product__title">Чем мы занимаемся</h2>
@@ -232,11 +232,11 @@
           </ul>
         </div>
       </section>
-    -->
+    
 
 
       <!--Секція Команда-->
-      <!--
+
       <section class="section team">
         <div class="container team-member">
           <h2 class="team-member__title">Наша команда</h2>
@@ -425,7 +425,7 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
     </main>
 
     <!--Постійні клієнти-->
