--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
     </main>
 
     <!--Постійні клієнти-->
-    <!--
-    <section class="customers">
+  
+    <section class="section customers">
       <h2 class="customers__title">Постоянные клиенты</h2>
       <div class="container customer-container">
         <ul class="customers__list">
@@ -483,7 +483,7 @@
           </li>
         </ul>
       </div>
-    </section>-->
+    </section>
 
     <!--Підвал сайту-->
     <!--
