--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,11 @@
             >
           </li>
         </ul>
+
+<button class="close-button">
+  
+</button>
+
       </div>
     </header>
 
@@ -249,7 +254,7 @@
                     class="services-img"
                     src="./images/portfolio/img-8.jpg"
                     alt="Подвесной брелок"
-                    width="370"
+                    width="370px"
                   />
                   <p class="thumb-text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
