--- a/index.html
+++ b/index.html
@@ -61,6 +61,71 @@
             >
           </li>
         </ul>
+
+        <button type="button" class="menu-button is-open" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+          <svg width="40px" height="40px" aria-label="Переключетель мобильного меню">
+            <use
+              class="icon-cross"
+              href="./images/icon.svg/close-menu-40.svg#icon-close_40px"
+            ></use>
+            <use class="menu" href="./images/icon.svg/close-menu-40.svg#icon-menu_40px"></use>
+          </svg>
+        </button>
+      </div>
+
+      <div class="menu-container is-open" id="menu-container" data-menu>
+        <nav class="menu-content">
+          <ul class="menu-content__list">
+            <li class="menu-content__item">
+              <a class="menu-content menu-content__link--active" href="#">Студия</a>
+            </li>
+            <li class="menu-content__item">
+              <a class="menu-content__link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="menu-content__item">
+              <a class="menu-content__link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="menu-contacts">
+          <li class="menu-contacts__list">
+            <a class="menu-contacts__mail" href="mailto:info@devstudio.com">
+              info@devstudio.com</a
+            >
+          </li>
+          <li class="menu-contacts__list">
+            <a class="menu-contacts__phone" href="tel:380961111111">
+              +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+
+        <ul class="menu-socials">
+                  <li class="menu-socials__items">
+                    <a class="socials__link" href="Instagram">Instagram
+                    </a>
+                  </li>
+
+                  <li class="menu-socials__items">
+                    <a class="socials__link" href="Instagram">Twitter
+                  </li>
+
+                  <li class="menu-socials__items">
+                    <a class="socials__link" href="Instagram">Facebook
+                    </a>
+                  </li>
+
+                  <li class="menu-socials__items">
+                    <a class="socials__link" href="Instagram">Linkedin
+                    </a>
+                  </li>
+
+                </ul>
+              </div>
+            </li>
+      </div>
+
       </div>
     </header>
 
@@ -569,5 +634,7 @@
   
 
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
+    
   </body>
 </html>
