--- a/portfolio.html
+++ b/portfolio.html
@@ -63,11 +63,10 @@
 
         <button type="button" class="menu-button is-open" aria-expanded="false" data-menu-button>
           <svg width="40px" height="40px" aria-label="Переключетель мобильного меню">
-            <use
-              class="icon-cross"
+            <use class="icon-cross"
               href="./images/icon.svg/close-menu-40.svg#icon-close_40px"
             ></use>
-            <use class="menu" href="./images/icon.svg/close-menu-40.svg#icon-menu_40px"></use>
+            <use class="icon-menu" href="./images/icon.svg/close-menu-40.svg#icon-menu_40px"></use>
           </svg>
         </button>
       </div>
