--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
 
         <button type="button" class="menu-button is-open" aria-expanded="false" aria-controls="menu-container" data-menu-button>
           <svg width="40px" height="40px" aria-label="Переключетель мобильного меню">
-            <use class="icon-cross"
-              href="./images/icon.svg/close-menu-40.svg#icon-close_40px"
+            <use class="icon-menu" href="./images/icon.svg/close-menu_40px.svg#icon-menu_40px"
             ></use>
-            <use class="icon-menu" href="./images/icon.svg/close-menu-40.svg#icon-menu_40px"></use>
+            <use class="icon-cross" href="./images/icon.svg/close-menu_40px.svg#icon-close_40px"></use>
           </svg>
         </button>
       </div>
