--- a/portfolio.html
+++ b/portfolio.html
@@ -61,17 +61,16 @@
           </li>
         </ul>
 
-        <button type="button" class="menu-button is-open" aria-expanded="false" data-menu-button>
+        <button type="button" class="menu-button is-open" aria-expanded="false" aria-controls="menu-container" data-menu-button>
           <svg width="40px" height="40px" aria-label="Переключетель мобильного меню">
-            <use class="icon-cross"
-              href="./images/icon.svg/close-menu-40.svg#icon-close_40px"
+            <use class="icon-menu" href="./images/icon.svg/close-menu_40px.svg#icon-menu_40px"
             ></use>
-            <use class="icon-menu" href="./images/icon.svg/close-menu-40.svg#icon-menu_40px"></use>
+            <use class="icon-cross" href="./images/icon.svg/close-menu_40px.svg#icon-close_40px"></use>
           </svg>
         </button>
       </div>
 
-      <div class="menu-container">
+      <div class="menu-container is-open" id="menu-container" data-menu>
         <nav class="menu-content">
           <ul class="menu-content__list">
             <li class="menu-content__item">
@@ -97,6 +96,33 @@
               +38 096 111 11 11</a
             >
           </li>
+        </ul>
+
+        <ul class="menu-socials">
+                  <li class="menu-socials__items">
+                    <a class="socials__link" href="Instagram">Instagram
+                    </a>
+                  </li>
+
+                  <li class="menu-socials__items">
+                    <a class="socials__link" href="Instagram">Twitter
+                  </li>
+
+                  <li class="menu-socials__items">
+                    <a class="socials__link" href="Instagram">Facebook
+                    </a>
+                  </li>
+
+                  <li class="menu-socials__items">
+                    <a class="socials__link" href="Instagram">Linkedin
+                    </a>
+                  </li>
+
+                </ul>
+              </div>
+            </li>
+      </div>
+
         </ul>
       </div>
     </header>
