--- a/portfolio.html
+++ b/portfolio.html
@@ -33,10 +33,10 @@
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <a class="navigation__link" href="#">Студия</a>
+              <a class="navigation__link" href="./index.html">Студия</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link navigation__link--active" href="./index.html>Портфолио</a>
+              <a class="navigation__link navigation__link--active" href="#">Портфолио</a>
             </li>
             <li class="navigation__item">
               <a class="navigation__link" href="#">Контакты</a>
