--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,7 @@
 
       <div class="cotainer menu-container" id="menu-container" data-menu>
         
+        <nav class="menu-block">
           <ul class="menu-content">
             <li class="menu-content__list">
               <a class="menu-content__link" href="./index.html">Студия</a>
@@ -83,6 +84,7 @@
               <a class="menu-content__link" href="#">Контакты</a>
             </li>
           </ul>
+          </nav>
 
         <ul class="menu-contacts">
           <li class="menu-contacts__list">
