--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
       </div>
 
       <div class="cotainer menu-container" id="menu-container" data-menu>
+
+        <nav class="menu-block">
           <ul class="menu-content">
             <li class="menu-content__list">
               <a class="menu-content menu-content__link--active" href="#">Студия</a>
@@ -83,6 +85,7 @@
               <a class="menu-content__link" href="#">Контакты</a>
             </li>
           </ul>
+        </nav>
 
         <ul class="menu-contacts">
           <li class="menu-contacts__list">
