--- a/portfolio.html
+++ b/portfolio.html
@@ -68,6 +68,7 @@
             <use class="icon-cross" href="./images/icon.svg/close-menu_40px.svg#icon-close_40px"></use>
           </svg>
         </button>
+
       </div>
 
       <div class="cotainer menu-container" id="menu-container" data-menu>
@@ -108,6 +109,7 @@
 
                   <li class="menu-socials__list">
                     <a class="menu-socials__link" href="Instagram">Twitter
+                    </a>
                   </li>
 
                   <li class="menu-socials__list">
@@ -121,11 +123,9 @@
                   </li>
 
                 </ul>
-              </div>
-            </li>
 
-        </ul>
-      </div>
+              </div>
+            
     </header>
 
     <main class="portfolio">
@@ -328,7 +328,7 @@
                     srcset="./images/portfolio/img-8_sm.jpg 1x, ./images/portfolio/img-8_sm@2x.jpg 2x"
                     src="./images/portfolio/img-8_sm.jpg"
                     alt="Подвесной брелок"
-                    width="450px"
+                    width="450"
                     loading="lazy"
                   />
                   <p class="thumb-text">
