--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
       <div class="cotainer menu-container" id="menu-container" data-menu>
 
+        <div class="mobile-menu">
         <nav class="menu-block">
           <ul class="menu-content">
             <li class="menu-content__list">
@@ -86,6 +87,7 @@
             </li>
           </ul>
         </nav>
+        
 
         <ul class="menu-contacts">
           <li class="menu-contacts__list">
@@ -126,6 +128,7 @@
 
               </div>
 
+              </div>
     </header>
 
     <main>
