--- a/portfolio.html
+++ b/portfolio.html
@@ -73,6 +73,7 @@
 
       <div class="cotainer menu-container" id="menu-container" data-menu>
         
+        <div class="mobile-menu">
         <nav class="menu-block">
           <ul class="menu-content">
             <li class="menu-content__list">
@@ -126,6 +127,7 @@
 
               </div>
             
+              </div>
     </header>
 
     <main class="portfolio">
