--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
 
       <div class="cotainer menu-container" id="menu-container" data-menu>
 
-        <div class="mobile-menu">
+           <div class="mobile-menu">
         <nav class="menu-block">
           <ul class="menu-content">
             <li class="menu-content__list">
-              <a class="menu-content menu-content__link--active" href="#">Студия</a>
+              <a class="menu-content__link" href="./index.html">Студия</a>
             </li>
             <li class="menu-content__list">
-              <a class="menu-content__link" href="./portfolio.html">Портфолио</a>
+              <a class="menu-content menu-content__link--active" href="#">Портфолио</a>
             </li>
             <li class="menu-content__list">
               <a class="menu-content__link" href="#">Контакты</a>
             </li>
           </ul>
-        </nav>
-        
+          </nav>
 
+        <div class="contacts-block">
         <ul class="menu-contacts">
           <li class="menu-contacts__list">
             <a class="menu-contacts__phone" href="tel:380961111111">
@@ -125,9 +125,8 @@
                   </li>
 
                 </ul>
-
               </div>
-
+              </div>
               </div>
     </header>
 
