--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,7 @@
           </ul>
           </nav>
 
+        <div class="contacts-block">
         <ul class="menu-contacts">
           <li class="menu-contacts__list">
             <a class="menu-contacts__phone" href="tel:380961111111">
@@ -124,9 +125,8 @@
                   </li>
 
                 </ul>
-
               </div>
-            
+              </div>
               </div>
     </header>
 
