--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         <nav class="menu-block">
           <ul class="menu-content">
             <li class="menu-content__list">
-              <a class="menu-content__link" href="./index.html">Студия</a>
+              <a class="menu-content__link menu-content__link--active" href="#">Студия</a>
             </li>
             <li class="menu-content__list">
-              <a class="menu-content menu-content__link--active" href="#">Портфолио</a>
+              <a class="menu-content__link " href="./portfolio.html">Портфолио</a>
             </li>
             <li class="menu-content__list">
               <a class="menu-content__link" href="#">Контакты</a>
